--- a/fraud-1.mdx
+++ b/fraud-1.mdx
@@ -1,6 +1,6 @@
 ---
-title: Fraud Detection on Chalk Tutorial
-metaTitle: "Tutorial: Fraud Detection"
+title: 'Tutorial: Fraud Detection on Chalk'
+metaTitle: 'Tutorial: Fraud Detection'
 description: Build a feature pipeline for fraud detection.
 published: true
 ---
@@ -60,9 +60,9 @@ and will cover the full feature development lifecycle:
 Before you get started, make sure you have the
 [Chalk CLI installed](/docs/installation).
 
-[//]: # (First, we'll map in our existing data from SQL sources.)
-[//]: # (Then, we'll create a feature pipeline to transform that data into higher-order features.)
-[//]: # (Finally, we'll train a model and deploy it to production.)
+[//]: # "First, we'll map in our existing data from SQL sources."
+[//]: # "Then, we'll create a feature pipeline to transform that data into higher-order features."
+[//]: # "Finally, we'll train a model and deploy it to production."
 
 If you want to skip ahead, you can find the full source code for this tutorial on
 [GitHub](https://github.com/chalk-ai/fraud-example).
