--- a/fraud-4.mdx
+++ b/fraud-4.mdx
@@ -1,12 +1,12 @@
 ---
-title: Python Resolvers
-metaTitle: "Tutorial: Python Resolvers"
+title: 'Tutorial: Python Resolvers'
+metaTitle: 'Tutorial: Python Resolvers'
 description: Define resolvers in Python that call APIs and compute derived features.
 published: true
 ---
 
-*If you want to skip ahead, you can find the full source code for this tutorial on
-[GitHub](https://github.com/chalk-ai/fraud-example).*
+_If you want to skip ahead, you can find the full source code for this tutorial on
+[GitHub](https://github.com/chalk-ai/fraud-example)._
 
 ---
 
@@ -102,7 +102,7 @@ def test_names_completely_different():
         title="John Coltrane",
         name="Zyx",
     )
-````
+```
 
 You can read more about testing resolvers in the
 [API docs](/docs/unit-tests).
