--- a/fraud-6.mdx
+++ b/fraud-6.mdx
@@ -1,12 +1,12 @@
 ---
-title: Backtesting
-metaTitle: "Tutorial: Backtesting"
+title: 'Tutorial: Backtesting'
+metaTitle: 'Tutorial: Backtesting'
 description: Try out new feature values on historical data.
 published: true
 ---
 
-*If you want to skip ahead, you can find the full source code for this tutorial on
-[GitHub](https://github.com/chalk-ai/fraud-example).*
+_If you want to skip ahead, you can find the full source code for this tutorial on
+[GitHub](https://github.com/chalk-ai/fraud-example)._
 
 ---
 
