--- a/query-caching.mdx
+++ b/query-caching.mdx
@@ -1,5 +1,5 @@
 ---
-title: Caching
+title: Query Caching
 metaTitle: Query Caching
 description: Override default max-staleness for individual requests.
 published: true
