--- a/time.mdx
+++ b/time.mdx
@@ -1,5 +1,5 @@
 ---
-title: Time
+title: Time Overview
 description: Manage feature timestamps and point-in-time query timestamps.
 published: true
 ---
