--- a/features.mdx
+++ b/features.mdx
@@ -1,5 +1,6 @@
 ---
-title: Overview
+title: Features Overview
+shortTitle: Overview
 metaTitle: Features - Define features for training and inference.
 metaDescription: Features are properties of your data you want to train your model on. With Chalk, you can define your features in Python.
 description: Define features for training and inference.
