--- a/fraud-5.mdx
+++ b/fraud-5.mdx
@@ -1,12 +1,12 @@
 ---
-title: Inference
-metaTitle: "Tutorial: Inference"
+title: 'Tutorial: Inference'
+metaTitle: 'Tutorial: Inference'
 description: Integrate Chalk into your production decisioning systems.
 published: true
 ---
 
-*If you want to skip ahead, you can find the full source code for this tutorial on
-[GitHub](https://github.com/chalk-ai/fraud-example).*
+_If you want to skip ahead, you can find the full source code for this tutorial on
+[GitHub](https://github.com/chalk-ai/fraud-example)._
 
 ---
 
