--- a/integrations.mdx
+++ b/integrations.mdx
@@ -1,5 +1,6 @@
 ---
-title: Overview
+title: Integrations Overview
+shortTitle: Overview
 metaTitle: Integrations and APIs
 metaDescription: Instead of complex ETL jobs and streaming pipelines, make direct calls to your data sources. Chalk makes it fast and easy to connect to AWS, GCP, databases, streaming data, and more.
 description: Integrate with any data source.
