--- a/resolver-overview.mdx
+++ b/resolver-overview.mdx
@@ -1,5 +1,6 @@
 ---
-title: Overview
+title: Resolvers Overview
+shortTitle: Overview
 metaTitle: Resolvers - Create resolvers to compute feature values.
 metaDescription: Resolvers define how your feature values are computed. Resolvers can be written in Python or SQL.
 description: Create resolvers to compute feature values.
