title case overview pages

--- a/observability.mdx
+++ b/observability.mdx
@@ -1,5 +1,5 @@
 ---
-title: Observability Overview
+title: Observability overview
 shortTitle: Overview
 metaTitle: Observability - Monitor the execution of your feature pipelines
 metaDescription: Chalk monitors the execution of your feature pipelines and is able to alert you when problems arise.
