--- a/query-overview.mdx
+++ b/query-overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Queries Overview
+title: Queries overview
 shortTitle: Overview
 metaTitle: Queries - Fetch feature values via queries.
 metaDescription: Chalk computes features through online queries, which return real-time data as fast as possible, and offline queries, which are best for batch processing large amounts of data.
