--- a/query-online.mdx
+++ b/query-online.mdx
@@ -99,7 +99,7 @@ computes the target outputs of your query. These outputs are then returned.
 
 There are multiple ways to run an online query. You can use the
 [Chalk API Client](/api-docs#ChalkClient.query),
-the [Chalk CLI](/docs/query), or the [REST API](/docs/query-basics#rest-api). For
+the [Chalk CLI](/docs/query-basics), or the [REST API](/docs/query-basics#rest-api). For
 example the following calls all trigger the same online query:
 
 With the Chalk Python API Client:
