--- a/blue-green-deployment.mdx
+++ b/blue-green-deployment.mdx
@@ -103,3 +103,6 @@ Blue-green deployments are a powerful tool for minimizing downtime through a gra
 running two deployments in parallel also has resource implications and may not be necessary for all teams. We
 would recommend blue-green deployments for teams that have a high volume of traffic in their production environments
 where the benefit of minimizing downtime risk is worth the cost of additional resources required.
+
+If you are interested in using blue-green deployments, please reach out to the Chalk team and we can help you
+determine what configurations are best suited for your release strategy. 
